force-app/main/default/objects/Invoice_Statement__c/Invoice_Statement__c.object-meta.xml
<CustomObject>
    <label>InvStatement</label>
    <nameField>
        <displayFormat>INV-{000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InvStatement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>