force-app/main/default/objects/Invoice_Statement__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Amt greater than 5000 then approval is reuqired</description>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>