force-app/main/default/objects/Invoice_Statement__c/fields/TotalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalValue__c</fullName>
    <label>TotalValue</label>
    <summarizedField>Line_item__c.Value__c</summarizedField>
    <summaryForeignKey>Line_item__c.InvStatement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>