force-app/main/default/objects/Invoice_Statement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Description__c</columns>
    <columns>TotalValue__c</columns>
    <columns>IsApproved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>